# CrowAct

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
CrowAct/: __init__.py
CrowAct/agent/: __init__.py  model.py  prompt.py  provider.py  runtime.py  sse.py  tools.py
