[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crowact"
version = "0.1.1"
description = "A lightweight ReAct agent framework with tool calling, streaming chunks, and pluggable providers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "Qinkun" },
]
keywords = ["agent", "react", "llm", "tool-calling", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "dotenv>=0.9.9",
    "requests>=2.32.3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["CrowAct*"]
